cuarto commit de clase de manipulacion del dom con js

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ nav {
 /*menu de usuario*/
 
 .desktop-menu {
+    z-index: 10;
     position: absolute;
     top: 60px;
     right: 55px;
@@ -127,15 +128,20 @@ nav {
 /* menu vercion responcive*/
 
   .mobile-menu {
+    left: 0;
+    
+    width: 100%;
     background: var(--white);
     position: absolute;
-    padding: 24px;
     top: 61px;
+    
   }
   .mobile-menu a {
+    margin-left: 24px;
     text-decoration: none;
     color: var(--black);
     font-weight: bold;
+   
   }
   .mobile-menu ul {
     padding: 0;
@@ -159,14 +165,20 @@ nav {
 
 /*product-cart*/
 
-  .product-detail {
+  .products-detail {
+   
     background: var(--white);
     width: 360px;
-    padding: 0px 24px;
+ 
     box-sizing: border-box;
     position: absolute;
     right: 0;
   }
+  #menu-cart{
+    z-index: 5;
+    padding: 0px 24px;
+  }
+
   .title-container {
     display: flex;
   }
@@ -244,40 +256,110 @@ nav {
   gap: 26px;
   place-content: center;
 }
-.product-card {
+.products-card {
   width: 240px;
 }
-.product-card img {
+.products-card img {
   width: 240px;
   height: 240px;
   border-radius: 20px;
   object-fit: cover;
 }
-.product-info {
+.products-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 12px;
 }
-.product-info figure {
+.products-info figure {
   margin: 0;
 }
-.product-info figure img {
+.products-info figure img {
   width: 35px;
   height: 35px;
 }
-.product-info div p:nth-child(1) {
+.products-info div p:nth-child(1) {
   font-weight: bold;
   font-size: var(--md);
   margin-top: 0;
   margin-bottom: 4px;
 }
-.product-info div p:nth-child(2) {
+.products-info div p:nth-child(2) {
   font-size: var(--sm);
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
 }
+
+/*aside detalles del producto......................*/
+
+.product-detail {
+
+  width: 360px;
+  padding-bottom: 24px;
+  position: absolute;
+  right: 0;
+  top: 61px;
+  margin: 0;
+}
+.product-detail-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+.product-detail-close:hover {
+  cursor: pointer;
+}
+.product-detail > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+.product-info {
+  margin: 24px 24px 0 24px;
+}
+.product-info p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.product-info p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.product-info p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media (max-width: 640px) {
   .menu {
@@ -292,18 +374,22 @@ nav {
   .desktop-menu {
     display: none;
   }
-  .product-detail {
+  .products-detail {
     width: 100%;
   }
   .cards-container {
     grid-template-columns: repeat(auto-fill, 140px);
   }
-  .product-card {
+  .products-card {
     width: 140px;
   }
-  .product-card img {
+  .products-card img {
     width: 140px;
     height: 140px;
+  }
+  /*aside detalles del producto......*/
+  .product-detail {
+    width: 100%;
   }
 
 }
